added network monitor

--- a/docs/networkHealth.mdx
+++ b/docs/networkHealth.mdx
@@ -2,7 +2,7 @@
 
 <iframe id="ytplayer" type="text/html"
   class="video"
-  src="https://www.youtube.com/embed/Tlk1ndMzHII?autoplay=1&mute=1"
+  src="https://www.youtube.com/embed/XBykVWBSNXM?autoplay=1&mute=1"
   allowFullScreen="allowFullScreen"
   mozallowfullscreen="mozallowfullscreen"
   msallowfullscreen="msallowfullscreen"
