--- a/docs/networkHealth.mdx
+++ b/docs/networkHealth.mdx
@@ -1,8 +1,15 @@
-# Network Health
+---
+slug: /network_health
+title: Network Health
+sidebar_position: 9
+
+---
+
+# Liberty 1.2 Network Health
 
 <iframe id="ytplayer" type="text/html"
   class="video"
-  src="https://www.youtube.com/embed/IQbZXvaOlPw?autoplay=1&mute=1"
+  src="https://www.youtube.com/embed/vPJPtLtBgFM?autoplay=1&mute=1"
   allowFullScreen="allowFullScreen"
   mozallowfullscreen="mozallowfullscreen"
   msallowfullscreen="msallowfullscreen"
