--- a/docs/basics/faucet.mdx
+++ b/docs/basics/faucet.mdx
@@ -3,14 +3,12 @@ title: Faucet
 sidebar_position: 3
 ---
 
-# Liberty 1.3 Faucet
+# Liberty Faucet
 
-**Shardeum Liberty 1.3:** https://faucet.liberty10.shardeum.org/
+**Shardeum Liberty 1.4:** https://faucet.liberty10.shardeum.org/
+
+**Shardeum Liberty 2.0:** https://faucet.liberty20.shardeum.org/
 
 ![faucet_1](/img/faucet/faucet.png)
 
 import FaucetExplorer from '@site/src/components/FaucetExplorer.js';
-
-# Liberty 1.3 Faucet Explorer
-
-<FaucetExplorer/>
