--- a/docs/networkHealth.mdx
+++ b/docs/networkHealth.mdx
@@ -5,11 +5,11 @@ sidebar_position: 9
 
 ---
 
-# Liberty 1.3 Network Health
+## Liberty Network Health
 
 <iframe id="ytplayer" type="text/html"
   class="video"
-  src="https://www.youtube.com/embed/vPJPtLtBgFM?autoplay=1&mute=1"
+  src="https://www.youtube.com/embed/2UfrUqV0GBA?autoplay=1&mute=1"
   allowFullScreen="allowFullScreen"
   mozallowfullscreen="mozallowfullscreen"
   msallowfullscreen="msallowfullscreen"
