--- a/docs/networkHealth.mdx
+++ b/docs/networkHealth.mdx
@@ -9,7 +9,7 @@ sidebar_position: 9
 
 <iframe id="ytplayer" type="text/html"
   class="video"
-  src="https://www.youtube.com/embed/b3pCO6jsxeo?autoplay=1&mute=1"
+  src="https://www.youtube.com/embed/yB6xy6fEmiQ?autoplay=1&mute=1"
   allowFullScreen="allowFullScreen"
   mozallowfullscreen="mozallowfullscreen"
   msallowfullscreen="msallowfullscreen"
