EIP2930 transfer, single contract and multicall example

--- a/docs/developer/eip-2930.md
+++ b/docs/developer/eip-2930.md
@@ -1,8 +1,38 @@
 ---
-title: EIP 2930 Smart Contracts
+title: EIP 2930 Transactions
 sidebar_position: 5
 ---
+# EIP 2930 Transactions
 
-# EIP 2930 Smart Contracts
+## Wallet: Transfer MSG.VALUE (SHM on Shardeum) between other wallet addresses
 
-Coming soon...
+Send an EIP 2930 transaction with an accessList address that has no storage:
+
+https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Scripts/python/ShardeumLegacyEIP2930WalletNoStorage.py)
+
+## Contract (Single Address)
+
+### SimpleStorage Solidity Contract
+
+Contract with storage slot 0 as a uint:
+
+https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Contracts/Store.sol
+
+### Contract SimpleStorage: Update Contract State
+
+Send an EIP 2930 transaction with the accessList contract address with the storage slot (0 in this case to change the contract state):
+
+https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Scripts/python/ShardeumLegacyEIP2930ContractStorage.py
+
+## Contract: Multicall
+
+Contract which calls contracts One and Two:
+
+https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Contracts/MultiCall.sol
+
+### Contract Multicall: Update Contract States in Multicall, One and Two
+
+Multicall multiple accessList addresses with different storage slots:
+
+https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Scripts/python/ShardeumContractEIP2930MulticallContracts.py
+___
