EIP-2930 context and accessList simulator tool

--- a/docs/developer/eip-2930.md
+++ b/docs/developer/eip-2930.md
@@ -1,38 +1,85 @@
 ---
-title: EIP 2930 Transactions
+title: EIP-2930 Transactions
 sidebar_position: 5
 ---
-# EIP 2930 Transactions
+## What is EIP-2930?
 
-## Wallet: Transfer MSG.VALUE (SHM on Shardeum) between other wallet addresses
+EIP-2930 allows users to define addresses and storage slots for a transaction.
 
-Send an EIP 2930 transaction with an accessList address that has no storage:
+https://eips.ethereum.org/EIPS/eip-2930
+
+## Why is EIP-2930 important?
+
+Shardeum Liberty 1.4 does not require EIP-2930 because the network is not sharded.
+You can optionally use EIP-2930 to save gas on Shardeum Liberty 1.4.
+
+Shardeum Liberty 2.0 requires EIP-2930 in order to communicate with addresses that exist on different shards.
+Note: some addresses with the same prefix will be on same shard, so in that scenario EIP-2930 is optional.
+
+## Where is the EIP-2930 data located for a transaction?
+
+The accessList transaction parameter is where the EIP-2930 address and storage slot data goes.
+
+## How do I define an accessList for an EIP-2930 transaction?
+
+Based on the EIP-2930 specification, the general syntax should be:
+
+  -the address [20 bytes]
+
+  -then the storage slots being accessed at that address [32 bytes]
+
+Example:
+
+    [
+        [
+            "0xde0b295669a9fd93d5f28d9ec85e40f4cb697bae",
+            [
+                "0x0000000000000000000000000000000000000000000000000000000000000003",
+                "0x0000000000000000000000000000000000000000000000000000000000000007"
+            ]
+        ],
+        [
+            "0xbb9bc244d798123fde783fcc1c72d3bb8c189413",
+            []
+        ]
+    ]
+
+## When should I use EIP-2930 on Shardeum Liberty 2.0?
+
+## EIP-2930 Optional:
+
+## Transfer SHM on Shardeum Between Wallets
+
+Send an EIP-2930 transaction with an accessList address that has no storage:
 
 https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Scripts/python/ShardeumLegacyEIP2930WalletNoStorage.py)
 
-## Contract (Single Address)
-
-### SimpleStorage Solidity Contract
+## Contract (Single Address): SimpleStorage
 
 Contract with storage slot 0 as a uint:
 
 https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Contracts/Store.sol
 
-### Contract SimpleStorage: Update Contract State
-
-Send an EIP 2930 transaction with the accessList contract address with the storage slot (0 in this case to change the contract state):
+Send an EIP-2930 transaction with the accessList contract address with the storage slot (0 in this case to change the contract state):
 
 https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Scripts/python/ShardeumLegacyEIP2930ContractStorage.py
 
+## EIP-2930 Required:
+
 ## Contract: Multicall
 
-Contract which calls contracts One and Two:
+Multicall can call other contracts:
 
 https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Contracts/MultiCall.sol
-
-### Contract Multicall: Update Contract States in Multicall, One and Two
 
 Multicall multiple accessList addresses with different storage slots:
 
 https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Scripts/python/ShardeumContractEIP2930MulticallContracts.py
-___
+
+## How can I create an EIP-2930 accessList easily?
+
+## EIP-2930 accessList simulator
+
+Tool generates accessList with 91% accuracy:
+
+https://github.com/alexchenzl/predict-al
