EIP-2930 accessList example with GlobalSwap links

--- a/docs/developer/eip-2930.md
+++ b/docs/developer/eip-2930.md
@@ -83,3 +83,13 @@ https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Scripts/
 Tool generates accessList with 91% accuracy:
 
 https://github.com/alexchenzl/predict-al
+
+## GlobalSwap: Liberty 2.0 Multicall Sharded AMM DEX
+
+Website:
+
+https://globalswap.netlify.app/#/swap
+
+EIP-2930 accessList generation for swap transactions can be found in this GitHub repository:
+
+https://github.com/shardeum-globalswap/interface/tree/support-eip2930
