EIP2930 examples in Javascript and Python

--- a/docs/developer/eip-2930.md
+++ b/docs/developer/eip-2930.md
@@ -2,6 +2,10 @@
 title: EIP-2930 Transactions
 sidebar_position: 5
 ---
+
+import Tabs from '@theme/Tabs';
+import TabItem from '@theme/TabItem';
+
 ## What is EIP-2930?
 
 EIP-2930 allows users to define addresses and storage slots for a transaction.
@@ -16,7 +20,7 @@ You can optionally use EIP-2930 to save gas on Shardeum Liberty 1.4.
 Shardeum Liberty 2.0 requires EIP-2930 in order to communicate with addresses that exist on different shards.
 Note: some addresses with the same prefix will be on same shard, so in that scenario EIP-2930 is optional.
 
-## Where is the EIP-2930 data located for a transaction?
+## Where is EIP-2930 data located for a transaction?
 
 The accessList transaction parameter is where the EIP-2930 address and storage slot data goes.
 
@@ -48,33 +52,497 @@ Example:
 
 ## EIP-2930 Optional:
 
-## Transfer SHM on Shardeum Between Wallets
+## Transfer SHM on Shardeum Between Wallets:
 
 Send an EIP-2930 transaction with an accessList address that has no storage:
 
-https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Scripts/python/ShardeumLegacyEIP2930WalletNoStorage.py)
+<Tabs>
+  <TabItem value="python" label="Python" default>
 
-## Contract (Single Address): SimpleStorage
+      from web3 import Web3
+      import json
+      import os
+      import time
 
-Contract with storage slot 0 as a uint:
+      ShardeumConnectionHTTPS = "https://liberty20.shardeum.org/";
+      web3 = Web3(Web3.HTTPProvider(ShardeumConnectionHTTPS))
 
-https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Contracts/Store.sol
+      chainIdConnected = web3.eth.chain_id
+      print("chainIdConnected: " + str(chainIdConnected))
 
-Send an EIP-2930 transaction with the accessList contract address with the storage slot (0 in this case to change the contract state):
+      devTestnetPrivateKey = str(os.environ['devTestnetPrivateKey']);
 
-https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Scripts/python/ShardeumLegacyEIP2930ContractStorage.py
+      userWallet = (web3.eth.account.from_key(devTestnetPrivateKey)).address
+      print("User Wallet Address: " + userWallet)
+
+      walletAddressSentMsgValueTo = "0x66C1d8A5ee726b545576A75380391835F8AAA43c"
+      print("walletAddressSentMsgValueTo: " + walletAddressSentMsgValueTo)
+
+      oneEtherInWeiSHM = "1000000000000000000"
+      print("weiMsgValueToSend: " + oneEtherInWeiSHM)
+
+      userBalance =  web3.eth.getBalance(userWallet);
+      print("User Balance [Shardeum SHM]" )
+      print(web3.fromWei(userBalance, "ether"))
+
+
+      receiverBalance =  web3.eth.getBalance(walletAddressSentMsgValueTo);
+      print("Receiver Balance [Shardeum SHM]" )
+      print(web3.fromWei(receiverBalance, "ether"))
+
+      transferTx = {
+          'chainId' : chainIdConnected,
+          'nonce':  web3.eth.getTransactionCount(userWallet)       ,
+          'to': walletAddressSentMsgValueTo, #WORKS WITH REGULAR WALLETS BUT CANNOT SEND TO CONTRACT FOR SOME REASON?
+          'gas': 2100000, #WORKS WITH 1000000. If not try : Remix > deploy and run transactions
+          'gasPrice': web3.toWei('30', 'gwei'), # https://etherscan.io/gastracker
+          'value': int(oneEtherInWeiSHM),
+          'accessList' :
+                      [
+                          {
+                              "address" : walletAddressSentMsgValueTo,
+                              "storageKeys": []
+                          }
+                      ]
+      }
+
+      signed_tx = web3.eth.account.signTransaction(transferTx, devTestnetPrivateKey)
+      tx_hash = web3.toHex(web3.eth.sendRawTransaction(signed_tx.rawTransaction))
+      print("TX HASH: " + tx_hash)
+
+      time.sleep(15)
+
+      receipt = web3.eth.getTransactionReceipt(tx_hash)
+      print("TX RECEIPT: " + str(receipt) )
+
+  </TabItem>
+  <TabItem value="javascript" label="Javascript" default>
+
+      const Web3 = require('web3')
+      const ethers = require("ethers")
+
+      const rpcURL = "https://liberty20.shardeum.org/"
+      const web3 = new Web3(rpcURL)
+
+      const provider = new ethers.providers.JsonRpcProvider(rpcURL)
+      const signer = new ethers.Wallet(Buffer.from(process.env.devTestnetPrivateKey, 'hex'), provider);
+      console.log("User wallet address: " + signer.address)
+
+      createAndSendTx();
+
+      async function createAndSendTx() {
+
+          const chainIdConnected = await web3.eth.getChainId();
+          console.log("chainIdConnected: "+ chainIdConnected)
+
+          const walletAddressSentMsgValueTo = "0x66C1d8A5ee726b545576A75380391835F8AAA43c"
+          console.log("walletAddressSentMsgValueTo: " + walletAddressSentMsgValueTo)
+
+          const oneEtherInWeiSHM = "1000000000000000000"
+          console.log("weiMsgValueToSend: " + oneEtherInWeiSHM)
+
+          const userBalance = await provider.getBalance(signer.address);
+          console.log("User Balance [Shardeum SHM]" )
+          console.log(ethers.utils.formatEther(userBalance))
+
+          const receiverBalance = await provider.getBalance(walletAddressSentMsgValueTo);
+          console.log("Receiver Balance [Shardeum SHM]" )
+          console.log(ethers.utils.formatEther(receiverBalance))
+
+          const txCount = await provider.getTransactionCount(signer.address);
+
+          const tx = signer.sendTransaction({
+                chainId: chainIdConnected,
+                to: walletAddressSentMsgValueTo,
+                nonce:    web3.utils.toHex(txCount),
+                gasLimit: web3.utils.toHex(300000), // Raise the gas limit to a much higher amount
+                gasPrice: web3.utils.toHex(web3.utils.toWei('30', 'gwei')),
+                value: oneEtherInWeiSHM,
+                type: 1,
+                accessList: [
+                  {
+                    address: walletAddressSentMsgValueTo,
+                    storageKeys: []
+                  }
+                ]
+
+          });
+
+          console.log("WAIT FOR TX RECEIPT: ")
+          await tx
+          console.log("TX RECEIPT: ")
+          console.log(tx)
+
+      }
+
+  </TabItem>
+
+</Tabs>
+
+
+## Contracts contractToCall and Multicall:
+
+<Tabs>
+  <TabItem value="solidity" label="Solidity" default>
+
+      // SPDX-License-Identifier: MIT
+      pragma solidity 0.8.17;
+
+      contract contractToCall {
+          uint public slot0; //uint is 32 bytes and fills a 32 byte slot. //Do not set 0 manually it wastes gas!
+
+          function set(uint x) public {
+              slot0 = x;
+          }
+
+      }
+
+      contract Multicall {
+
+          contractToCall public callContractToCall;
+
+          constructor(address setCallOne) {
+              callContractToCall = contractToCall(setCallOne);
+          }
+
+          function multiCall(uint x) public {
+              callContractToCall.set(x);
+          }
+
+      }
+
+  </TabItem>
+</Tabs>
+
+## contractToCall (Single Address):
+
+Send an EIP-2930 transaction with a accessList. The accessList contains the contract's address and accessed storage slot (or slots).
+In this case, it will be storage slot0, because it is a single uint storage variable (uint = 256 bits = 32 bytes) which is modified when we call "set(uint)".
+
+<Tabs>
+  <TabItem value="python" label="Python" default>
+
+      from web3 import Web3
+      import json
+      import os
+      import math
+      import time
+
+      ShardeumConnectionHTTPS = "https://liberty20.shardeum.org/";
+      web3 = Web3(Web3.HTTPProvider(ShardeumConnectionHTTPS))
+
+      chainIdConnected = web3.eth.chain_id
+      print("chainIdConnected: " + str(chainIdConnected))
+
+      devTestnetPrivateKey = str(os.environ['devTestnetPrivateKey']);
+
+      userWallet = (web3.eth.account.from_key(devTestnetPrivateKey)).address
+      print("User Wallet Address: " + userWallet)
+
+      Contract_At_Address= web3.toChecksumAddress("0xE8eb488bEe284ed5b9657D5fc928f90F40BC2d57");
+      abi_Contract = json.loads('[{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"set","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[],"name":"slot0","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"}]')
+      contract_Call = web3.eth.contract(address = Contract_At_Address , abi = abi_Contract);
+
+      print(contract_Call.functions.slot0().call());
+
+      unixTime = int(math.floor( time.time()*(10**3)) )
+      print("UNIX TIME: " + str(unixTime) )
+
+      EIP_2930_tx = {
+          'chainId' : chainIdConnected,
+          'nonce':  web3.eth.getTransactionCount(userWallet)       ,
+          'to': Contract_At_Address, #WORKS WITH REGULAR WALLETS BUT CANNOT SEND TO CONTRACT FOR SOME REASON?
+          'gas': 2100000, #WORKS WITH 1000000. If not try : Remix > deploy and run transactions
+          'gasPrice': web3.toWei('30', 'gwei'), # https://etherscan.io/gastracker
+          'data' : contract_Call.encodeABI(fn_name='set', args=[unixTime]) ,
+          'accessList' :
+                      [
+                          {
+                              "address" : Contract_At_Address,
+                              "storageKeys": [
+                                  "0x0000000000000000000000000000000000000000000000000000000000000000",
+                              ]
+                          }
+                      ]
+      }
+
+      signed_tx = web3.eth.account.signTransaction(EIP_2930_tx, devTestnetPrivateKey)
+      tx_hash = web3.toHex(web3.eth.sendRawTransaction(signed_tx.rawTransaction))
+      print("TX HASH: " + tx_hash)
+
+      time.sleep(15)
+
+      receipt = web3.eth.getTransactionReceipt(tx_hash)
+      print("TX RECEIPT: " + str(receipt) )
+
+
+  </TabItem>
+  <TabItem value="javascript" label="Javascript" default>
+
+      const Web3 = require('web3')
+      const ethers = require("ethers")
+
+      const rpcURL = "https://liberty20.shardeum.org/"
+      const web3 = new Web3(rpcURL)
+
+      const provider = new ethers.providers.JsonRpcProvider(rpcURL)
+      const signer = new ethers.Wallet(Buffer.from(process.env.devTestnetPrivateKey, 'hex'), provider);
+      console.log("User wallet address: " + signer.address)
+
+      const simpleStorageAddress = '0xE8eb488bEe284ed5b9657D5fc928f90F40BC2d57'
+      const simpleStorageABI = [{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"set","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[],"name":"slot0","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"}]
+
+      const simpleStorageDeployed = new web3.eth.Contract(simpleStorageABI, simpleStorageAddress)
+
+      createAndSendTx();
+
+      async function createAndSendTx() {
+
+          const chainIdConnected = await web3.eth.getChainId();
+          console.log("chainIdConnected: "+ chainIdConnected)
+
+          const slot0 = await simpleStorageDeployed.methods.slot0().call()
+          console.log("slot0: "+ slot0)
+
+          const unixTime = Date.now();
+          console.log("UNIX TIME: " + unixTime)
+
+          const txCount = await provider.getTransactionCount(signer.address);
+
+          const tx = signer.sendTransaction({
+                chainId: chainIdConnected,
+                to: simpleStorageAddress,
+                nonce:    web3.utils.toHex(txCount),
+                gasLimit: web3.utils.toHex(300000), // Raise the gas limit to a much higher amount
+                gasPrice: web3.utils.toHex(web3.utils.toWei('30', 'gwei')),
+                data: simpleStorageDeployed.methods.set(unixTime).encodeABI(),
+                type: 1,
+                accessList: [
+                  {
+                    address: simpleStorageAddress,
+                    storageKeys: [
+                      "0x0000000000000000000000000000000000000000000000000000000000000000",
+                    ]
+                  }
+                ]
+
+          });
+
+          console.log("WAIT FOR TX RECEIPT: ")
+          await tx
+          console.log("TX RECEIPT: ")
+          console.log(tx)
+
+      }
+
+  </TabItem>
+
+</Tabs>
+
 
 ## EIP-2930 Required:
 
-## Contract: Multicall
+## Contract: Multicall (Multiple Addresses):
 
-Multicall can call other contracts:
+Contract Multicall can call other contracts (in this case contractToCall).
+For sharded Shardeum networks (like Liberty 2.0), we need to specify the addresses and storage slots being called outside "from" and "to" in the transaction.
 
-https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Contracts/MultiCall.sol
 
-Multicall multiple accessList addresses with different storage slots:
+## Liberty 2.0 Address codeHash in storage slots:
 
-https://github.com/MarcusWentz/Web3_Get_Set_Contract_Metamask/blob/main/Scripts/python/ShardeumContractEIP2930MulticallContracts.py
+Liberty 2.0 requires the codeHash for each externally called address (20 bytes) to be mentioned in a storage slot for each address being called externally.
+Liberty 2.1 will not need the codeHash in storage slots for each corresponding externally called address.
+
+In Solidity, you can get an address codeHash from a deployed contract on the matching network [along with checking if an address is a contract].
+You can also get an address codeHash with the ethers library.
+
+## Solidity codeHash example:
+
+<Tabs>
+  <TabItem value="solidity" label="Solidity" default>
+
+    // SPDX-License-Identifier: MIT
+    pragma solidity 0.8.17;
+
+    contract addressCodeHash { //From https://soliditydeveloper.com/extcodehash
+
+        function getCodeHash(address account) public view returns (bytes32) {
+
+            bytes32 codeHash;    
+            assembly { codeHash := extcodehash(account) }
+
+            return (codeHash);
+        }
+
+        function isContractBasedOnHash(address account) public view returns (bool) {
+            bytes32 accountHash = 0xc5d2460186f7233c927e7db2dcc703c0e500b653ca82273b7bfad8045d85a470;
+
+            bytes32 codeHash;    
+            assembly { codeHash := extcodehash(account) }
+
+            return (codeHash != accountHash && codeHash != 0x0);
+        }
+
+        function isContractBasedOnSize(address addr) public view returns (bool) {
+            uint size;
+            assembly { size := extcodesize(addr) }
+            return size > 0;
+        }
+
+
+    }
+
+  </TabItem>
+</Tabs>
+
+## EIP-2930 accessList transactions for Multicall contract to modify slot0 in contractToCall:
+
+<Tabs>
+  <TabItem value="python" label="Python" default>
+
+    from web3 import Web3
+    import json
+    import os
+    import time
+    from hexbytes import HexBytes
+    import math
+
+    ShardeumConnectionHTTPS = "https://liberty20.shardeum.org/";
+    web3 = Web3(Web3.HTTPProvider(ShardeumConnectionHTTPS))
+
+    chainIdConnected = web3.eth.chain_id
+    print("chainIdConnected: " + str(chainIdConnected))
+
+    devTestnetPrivateKey = str(os.environ['devTestnetPrivateKey']);
+
+    userWallet = (web3.eth.account.from_key(devTestnetPrivateKey)).address
+    print("User Wallet Address: " + userWallet)
+
+    multicallContractAddress= web3.toChecksumAddress("0x41Ae7549023a7F0b6Cb7FE4d1807487b18cbAe10");
+    multicallContractABI = json.loads('[{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"multiCall","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[{"internalType":"address","name":"setCallOne","type":"address"}],"stateMutability":"nonpayable","type":"constructor"},{"inputs":[],"name":"callContractToCall","outputs":[{"internalType":"contractcontractToCall","name":"","type":"address"}],"stateMutability":"view","type":"function"}]')
+    multicallContractDeployed = web3.eth.contract(address = multicallContractAddress , abi = multicallContractABI);
+
+    contractOneAddress = multicallContractDeployed.functions.callContractToCall().call()
+    print("contractOneAddress: "+contractOneAddress)
+    contractOneABI = [{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"set","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[],"name":"slot0","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"}]
+    contractOneDeployed = web3.eth.contract(address = contractOneAddress , abi = contractOneABI);
+
+    slot0 = contractOneDeployed.functions.slot0().call()
+    print("slot0: "+ str(slot0) )
+
+    getCodeHashContractAddress= web3.toChecksumAddress("0x7d0a188781AdEf198f7056268d2FDa3F1B534287");
+    getCodeHashContractABI = json.loads('[{"inputs":[{"internalType":"address","name":"account","type":"address"}],"name":"getCodeHash","outputs":[{"internalType":"bytes32","name":"","type":"bytes32"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"account","type":"address"}],"name":"isContractBasedOnHash","outputs":[{"internalType":"bool","name":"","type":"bool"}],"stateMutability":"view","type":"function"},{"inputs":[{"internalType":"address","name":"addr","type":"address"}],"name":"isContractBasedOnSize","outputs":[{"internalType":"bool","name":"","type":"bool"}],"stateMutability":"view","type":"function"}]')
+    getCodeHashContractDeployed = web3.eth.contract(address = getCodeHashContractAddress , abi = getCodeHashContractABI);
+
+    codeHashBytes32 = getCodeHashContractDeployed.functions.getCodeHash(contractOneAddress).call()
+    codeHashString = "0x" + codeHashBytes32.hex()
+    print("contractOneAddress codeHash: " + codeHashString )
+
+    unixTime = int(math.floor( time.time()*(10**3)) )
+    print("UNIX TIME: " + str(unixTime) )
+
+    EIP_2930_tx = {
+        'chainId' : chainIdConnected,
+        'to': multicallContractAddress, #WORKS WITH REGULAR WALLETS BUT CANNOT SEND TO CONTRACT FOR SOME REASON?
+        'nonce':  web3.eth.getTransactionCount(userWallet)       ,
+        'gas': 2100000, #WORKS WITH 1000000. If not try : Remix > deploy and run transactions
+        'gasPrice': web3.toWei('30', 'gwei'), # https://etherscan.io/gastracker
+        'data' : multicallContractDeployed.encodeABI(fn_name='multiCall', args=[unixTime]) ,
+        'type' : 1,
+        'accessList' :
+                    [
+                        {
+                            "address" : contractOneAddress,
+                            "storageKeys": [
+                                "0x0000000000000000000000000000000000000000000000000000000000000000",
+                                codeHashString  ##Code hash from EXTCODEHASH https://blog.finxter.com/how-to-find-out-if-an-ethereum-address-is-a-contract/
+                            ]
+                        }
+                    ]
+    }
+
+    signed_tx = web3.eth.account.signTransaction(EIP_2930_tx, devTestnetPrivateKey)
+    tx_hash = web3.toHex(web3.eth.sendRawTransaction(signed_tx.rawTransaction))
+    print("TX HASH: " + tx_hash)
+
+    time.sleep(15)
+
+    receipt = web3.eth.getTransactionReceipt(tx_hash)
+    print("TX RECEIPT: " + str(receipt) )
+
+  </TabItem>
+  <TabItem value="javascript" label="Javascript" default>
+
+    const Web3 = require('web3')
+    const ethers = require("ethers")
+
+    const rpcURL = "https://liberty20.shardeum.org/"
+    const web3 = new Web3(rpcURL)
+
+    const provider = new ethers.providers.JsonRpcProvider(rpcURL)
+    const signer = new ethers.Wallet(Buffer.from(process.env.devTestnetPrivateKey, 'hex'), provider);
+    console.log("User wallet address: " + signer.address)
+
+    const contractAddress_JS = '0x41Ae7549023a7F0b6Cb7FE4d1807487b18cbAe10'
+    const contractABI_JS = [{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"multiCall","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[{"internalType":"address","name":"setCallOne","type":"address"}],"stateMutability":"nonpayable","type":"constructor"},{"inputs":[],"name":"callContractToCall","outputs":[{"internalType":"contractcontractToCall","name":"","type":"address"}],"stateMutability":"view","type":"function"}]
+
+    const contractDefined_JS = new web3.eth.Contract(contractABI_JS, contractAddress_JS)
+
+    createAndSendTx();
+
+    async function createAndSendTx() {
+
+    const chainIdConnected = await web3.eth.getChainId();
+    console.log("chainIdConnected: "+ chainIdConnected)
+
+    const contractOneAddress = await contractDefined_JS.methods.callContractToCall().call()
+    console.log("contractOneAddress: "+ contractOneAddress)
+    const contractOneABI = [{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"set","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[],"name":"slot0","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"}]
+
+    const contractOneDeployed = new web3.eth.Contract(contractOneABI, contractOneAddress)
+
+    const slot0 = await contractOneDeployed.methods.slot0().call()
+    console.log("slot0: "+ slot0)
+
+    const codeHash = await provider.getCode(contractOneAddress)
+    console.log("contractOneAddress codeHash: " + codeHash)
+
+    const unixTime = Date.now();
+    console.log("UNIX TIME: " + unixTime)
+
+    const txCount = await provider.getTransactionCount(signer.address);
+
+    const tx = signer.sendTransaction({
+        chainId: chainIdConnected,
+        to: contractAddress_JS,
+        nonce:    web3.utils.toHex(txCount),
+        gasLimit: web3.utils.toHex(2100000), // Raise the gas limit to a much higher amount
+        gasPrice: web3.utils.toHex(web3.utils.toWei('30', 'gwei')),
+        data: contractDefined_JS.methods.multiCall(unixTime).encodeABI(),
+        type: 1,
+        accessList: [
+          {
+            address: contractOneAddress, //Contract address we are calling from the "to" contract at some point.
+            storageKeys: [
+              "0x0000000000000000000000000000000000000000000000000000000000000000",
+              codeHash, //Code hash from EXTCODEHASH https://blog.finxter.com/how-to-find-out-if-an-ethereum-address-is-a-contract/
+            ]
+          }
+        ]
+
+    });
+
+    console.log("WAIT FOR TX RECEIPT: ")
+    await tx
+    console.log("TX RECEIPT: ")
+    console.log(tx)
+
+    }
+
+  </TabItem>
+
+</Tabs>
+
 
 ## How can I create an EIP-2930 accessList easily?
 
