EIP-2930 Transfer to another wallet based on private key

--- a/docs/developer/eip-2930.md
+++ b/docs/developer/eip-2930.md
@@ -59,121 +59,122 @@ Send an EIP-2930 transaction with an accessList address that has no storage:
 <Tabs>
   <TabItem value="python" label="Python" default>
 
-      from web3 import Web3
-      import json
-      import os
-      import time
+    from web3 import Web3
+    import json
+    import os
+    import time
 
-      ShardeumConnectionHTTPS = "https://liberty20.shardeum.org/";
-      web3 = Web3(Web3.HTTPProvider(ShardeumConnectionHTTPS))
+    ShardeumConnectionHTTPS = "https://liberty20.shardeum.org/";
+    web3 = Web3(Web3.HTTPProvider(ShardeumConnectionHTTPS))
 
-      chainIdConnected = web3.eth.chain_id
-      print("chainIdConnected: " + str(chainIdConnected))
+    chainIdConnected = web3.eth.chain_id
+    print("chainIdConnected: " + str(chainIdConnected))
 
-      devTestnetPrivateKey = str(os.environ['devTestnetPrivateKey']);
+    devTestnetPrivateKey = str(os.environ['devTestnetPrivateKey']);
 
-      userWallet = (web3.eth.account.from_key(devTestnetPrivateKey)).address
-      print("User Wallet Address: " + userWallet)
+    userWallet = (web3.eth.account.from_key(devTestnetPrivateKey)).address
+    print("User Wallet Address: " + userWallet)
 
-      walletAddressSentMsgValueTo = "0x66C1d8A5ee726b545576A75380391835F8AAA43c"
-      print("walletAddressSentMsgValueTo: " + walletAddressSentMsgValueTo)
+    devTestnetPrivateKeyTwo = str(os.environ['devTestnetPrivateKeyTwo']);
 
-      oneEtherInWeiSHM = "1000000000000000000"
-      print("weiMsgValueToSend: " + oneEtherInWeiSHM)
+    transferToWallet = (web3.eth.account.from_key(devTestnetPrivateKeyTwo)).address
+    print("transferToWallet address: " + transferToWallet)
 
-      userBalance =  web3.eth.getBalance(userWallet);
-      print("User Balance [Shardeum SHM]" )
-      print(web3.fromWei(userBalance, "ether"))
+    oneEtherInWeiSHM = "1000000000000000000"
+    print("weiMsgValueToSend: " + oneEtherInWeiSHM)
 
+    userBalance =  web3.eth.getBalance(userWallet);
+    print("User Balance [Shardeum SHM]" )
+    print(web3.fromWei(userBalance, "ether"))
 
-      receiverBalance =  web3.eth.getBalance(walletAddressSentMsgValueTo);
-      print("Receiver Balance [Shardeum SHM]" )
-      print(web3.fromWei(receiverBalance, "ether"))
+    receiverBalance =  web3.eth.getBalance(transferToWallet);
+    print("Receiver Balance [Shardeum SHM]" )
+    print(web3.fromWei(receiverBalance, "ether"))
 
-      transferTx = {
-          'chainId' : chainIdConnected,
-          'nonce':  web3.eth.getTransactionCount(userWallet)       ,
-          'to': walletAddressSentMsgValueTo, #WORKS WITH REGULAR WALLETS BUT CANNOT SEND TO CONTRACT FOR SOME REASON?
-          'gas': 2100000, #WORKS WITH 1000000. If not try : Remix > deploy and run transactions
-          'gasPrice': web3.toWei('30', 'gwei'), # https://etherscan.io/gastracker
-          'value': int(oneEtherInWeiSHM),
-          'accessList' :
-                      [
-                          {
-                              "address" : walletAddressSentMsgValueTo,
-                              "storageKeys": []
-                          }
-                      ]
-      }
+    transferTx = {
+        'chainId' : chainIdConnected,
+        'nonce':  web3.eth.getTransactionCount(userWallet)       ,
+        'to': transferToWallet, #WORKS WITH REGULAR WALLETS BUT CANNOT SEND TO CONTRACT FOR SOME REASON?
+        'gas': 2100000, #WORKS WITH 1000000. If not try : Remix > deploy and run transactions
+        'gasPrice': web3.toWei('30', 'gwei'), # https://etherscan.io/gastracker
+        'value': int(oneEtherInWeiSHM),
+        'accessList' :
+                    [
+                        {
+                            "address" : transferToWallet,
+                            "storageKeys": []
+                        }
+                    ]
+    }
 
-      signed_tx = web3.eth.account.signTransaction(transferTx, devTestnetPrivateKey)
-      tx_hash = web3.toHex(web3.eth.sendRawTransaction(signed_tx.rawTransaction))
-      print("TX HASH: " + tx_hash)
+    signed_tx = web3.eth.account.signTransaction(transferTx, devTestnetPrivateKey)
+    tx_hash = web3.toHex(web3.eth.sendRawTransaction(signed_tx.rawTransaction))
+    print("TX HASH: " + tx_hash)
 
-      time.sleep(15)
+    time.sleep(15)
 
-      receipt = web3.eth.getTransactionReceipt(tx_hash)
-      print("TX RECEIPT: " + str(receipt) )
+    receipt = web3.eth.getTransactionReceipt(tx_hash)
+    print("TX RECEIPT: " + str(receipt) )
 
   </TabItem>
   <TabItem value="javascript" label="Javascript" default>
 
-      const Web3 = require('web3')
-      const ethers = require("ethers")
+    const Web3 = require('web3')
+    const ethers = require("ethers")
 
-      const rpcURL = "https://liberty20.shardeum.org/"
-      const web3 = new Web3(rpcURL)
+    const rpcURL = "https://liberty20.shardeum.org/"
+    const web3 = new Web3(rpcURL)
 
-      const provider = new ethers.providers.JsonRpcProvider(rpcURL)
-      const signer = new ethers.Wallet(Buffer.from(process.env.devTestnetPrivateKey, 'hex'), provider);
-      console.log("User wallet address: " + signer.address)
+    const provider = new ethers.providers.JsonRpcProvider(rpcURL)
+    const signer = new ethers.Wallet(Buffer.from(process.env.devTestnetPrivateKey, 'hex'), provider);
+    console.log("User wallet address: " + signer.address)
 
-      createAndSendTx();
+    const transferToWallet = new ethers.Wallet(Buffer.from(process.env.devTestnetPrivateKeyTwo, 'hex'), provider);
+    console.log("transferToWallet address: " + transferToWallet.address)
 
-      async function createAndSendTx() {
+    createAndSendTx();
 
-          const chainIdConnected = await web3.eth.getChainId();
-          console.log("chainIdConnected: "+ chainIdConnected)
+    async function createAndSendTx() {
 
-          const walletAddressSentMsgValueTo = "0x66C1d8A5ee726b545576A75380391835F8AAA43c"
-          console.log("walletAddressSentMsgValueTo: " + walletAddressSentMsgValueTo)
+        const chainIdConnected = await web3.eth.getChainId();
+        console.log("chainIdConnected: "+ chainIdConnected)
 
-          const oneEtherInWeiSHM = "1000000000000000000"
-          console.log("weiMsgValueToSend: " + oneEtherInWeiSHM)
+        const oneEtherInWeiSHM = "1000000000000000000"
+        console.log("oneEtherInWeiSHM: " + oneEtherInWeiSHM)
 
-          const userBalance = await provider.getBalance(signer.address);
-          console.log("User Balance [Shardeum SHM]" )
-          console.log(ethers.utils.formatEther(userBalance))
+        const userBalance = await provider.getBalance(signer.address);
+        console.log("User Balance [Shardeum SHM]" )
+        console.log(ethers.utils.formatEther(userBalance))
 
-          const receiverBalance = await provider.getBalance(walletAddressSentMsgValueTo);
-          console.log("Receiver Balance [Shardeum SHM]" )
-          console.log(ethers.utils.formatEther(receiverBalance))
+        const receiverBalance = await provider.getBalance(transferToWallet.address);
+        console.log("Receiver Balance [Shardeum SHM]" )
+        console.log(ethers.utils.formatEther(receiverBalance))
 
-          const txCount = await provider.getTransactionCount(signer.address);
+        const txCount = await provider.getTransactionCount(signer.address);
 
-          const tx = signer.sendTransaction({
-                chainId: chainIdConnected,
-                to: walletAddressSentMsgValueTo,
-                nonce:    web3.utils.toHex(txCount),
-                gasLimit: web3.utils.toHex(300000), // Raise the gas limit to a much higher amount
-                gasPrice: web3.utils.toHex(web3.utils.toWei('30', 'gwei')),
-                value: oneEtherInWeiSHM,
-                type: 1,
-                accessList: [
-                  {
-                    address: walletAddressSentMsgValueTo,
-                    storageKeys: []
-                  }
-                ]
+        const tx = signer.sendTransaction({
+              chainId: chainIdConnected,
+              to: transferToWallet.address,
+              nonce:    web3.utils.toHex(txCount),
+              gasLimit: web3.utils.toHex(300000), // Raise the gas limit to a much higher amount
+              gasPrice: web3.utils.toHex(web3.utils.toWei('30', 'gwei')),
+              value: oneEtherInWeiSHM,
+              type: 1,
+              accessList: [
+                {
+                  address: transferToWallet.address,
+                  storageKeys: []
+                }
+              ]
 
-          });
+        });
 
-          console.log("WAIT FOR TX RECEIPT: ")
-          await tx
-          console.log("TX RECEIPT: ")
-          console.log(tx)
+        console.log("WAIT FOR TX RECEIPT: ")
+        await tx
+        console.log("TX RECEIPT: ")
+        console.log(tx)
 
-      }
+    }
 
   </TabItem>
 
