Faucet folder with page edits

--- a/docs/basics/Faucet/faucetExplorer.mdx
+++ b/docs/basics/Faucet/faucetExplorer.mdx
@@ -1,6 +1,6 @@
 ---
-title: Faucet Explorer
-sidebar_position: 4
+title: Faucet Statistics
+sidebar_position: 2
 ---
 
 import FaucetExplorer from '@site/src/components/FaucetExplorer.js';
