--- a/docs/developer/eip-2930.md
+++ b/docs/developer/eip-2930.md
@@ -186,31 +186,36 @@ Send an EIP-2930 transaction with an accessList address that has no storage:
 <Tabs>
   <TabItem value="solidity" label="Solidity" default>
 
-      // SPDX-License-Identifier: MIT
-      pragma solidity 0.8.17;
+    // SPDX-License-Identifier: MIT
+    pragma solidity 0.8.17;
 
-      contract contractToCall {
-          uint public slot0; //uint is 32 bytes and fills a 32 byte slot. //Do not set 0 manually it wastes gas!
+    contract contractToCall {
 
-          function set(uint x) public {
-              slot0 = x;
-          }
+        uint public slot0; //uint is 32 bytes and fills a 32 byte slot. //Do not set 0 manually it wastes gas!
 
-      }
+        function set(uint x) public {
+            slot0 = x;
+        }
 
-      contract Multicall {
+    }
 
-          contractToCall public callContractToCall;
+    contract Multicall {
 
-          constructor(address setCallOne) {
-              callContractToCall = contractToCall(setCallOne);
-          }
+        contractToCall public callContractToCall;
 
-          function multiCall(uint x) public {
-              callContractToCall.set(x);
-          }
+        constructor(address setCallOne) {
+            callContractToCall = contractToCall(setCallOne);
+        }
 
-      }
+        function multiCallRead() public view returns(uint) {
+            return callContractToCall.slot0();
+        }
+
+        function multiCallWrite(uint x) public {
+            callContractToCall.set(x);
+        }
+
+    }
 
   </TabItem>
 </Tabs>
@@ -405,7 +410,6 @@ You can also get an address codeHash with the ethers library.
     import json
     import os
     import time
-    from hexbytes import HexBytes
     import math
 
     ShardeumConnectionHTTPS = "https://liberty20.shardeum.org/";
@@ -419,16 +423,14 @@ You can also get an address codeHash with the ethers library.
     userWallet = (web3.eth.account.from_key(devTestnetPrivateKey)).address
     print("User Wallet Address: " + userWallet)
 
-    multicallContractAddress= web3.toChecksumAddress("0x41Ae7549023a7F0b6Cb7FE4d1807487b18cbAe10");
-    multicallContractABI = json.loads('[{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"multiCall","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[{"internalType":"address","name":"setCallOne","type":"address"}],"stateMutability":"nonpayable","type":"constructor"},{"inputs":[],"name":"callContractToCall","outputs":[{"internalType":"contractcontractToCall","name":"","type":"address"}],"stateMutability":"view","type":"function"}]')
+    multicallContractAddress= web3.toChecksumAddress("0xb1fEf690f84241738b188eF8b88e52B2cc59AbD2");
+    multicallContractABI = json.loads('[{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"multiCallWrite","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[{"internalType":"address","name":"setCallOne","type":"address"}],"stateMutability":"nonpayable","type":"constructor"},{"inputs":[],"name":"callContractToCall","outputs":[{"internalType":"contractcontractToCall","name":"","type":"address"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"multiCallRead","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"}]')
     multicallContractDeployed = web3.eth.contract(address = multicallContractAddress , abi = multicallContractABI);
 
     contractOneAddress = multicallContractDeployed.functions.callContractToCall().call()
     print("contractOneAddress: "+contractOneAddress)
-    contractOneABI = [{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"set","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[],"name":"slot0","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"}]
-    contractOneDeployed = web3.eth.contract(address = contractOneAddress , abi = contractOneABI);
 
-    slot0 = contractOneDeployed.functions.slot0().call()
+    slot0 = multicallContractDeployed.functions.multiCallRead().call()
     print("slot0: "+ str(slot0) )
 
     codeHashBytes32 =  (web3.eth.get_code(contractOneAddress))
@@ -439,23 +441,23 @@ You can also get an address codeHash with the ethers library.
     print("UNIX TIME: " + str(unixTime) )
 
     EIP_2930_tx = {
-        'chainId' : chainIdConnected,
-        'to': multicallContractAddress, #WORKS WITH REGULAR WALLETS BUT CANNOT SEND TO CONTRACT FOR SOME REASON?
-        'nonce':  web3.eth.getTransactionCount(userWallet)       ,
-        'gas': 2100000, #WORKS WITH 1000000. If not try : Remix > deploy and run transactions
-        'gasPrice': web3.toWei('30', 'gwei'), # https://etherscan.io/gastracker
-        'data' : multicallContractDeployed.encodeABI(fn_name='multiCall', args=[unixTime]) ,
-        'type' : 1,
-        'accessList' :
-                    [
-                        {
-                            "address" : contractOneAddress,
-                            "storageKeys": [
-                                "0x0000000000000000000000000000000000000000000000000000000000000000",
-                                codeHashString  ##Code hash from EXTCODEHASH https://blog.finxter.com/how-to-find-out-if-an-ethereum-address-is-a-contract/
-                            ]
-                        }
-                    ]
+      'chainId' : chainIdConnected,
+      'to': multicallContractAddress, #WORKS WITH REGULAR WALLETS BUT CANNOT SEND TO CONTRACT FOR SOME REASON?
+      'nonce':  web3.eth.getTransactionCount(userWallet)       ,
+      'gas': 2100000, #WORKS WITH 1000000. If not try : Remix > deploy and run transactions
+      'gasPrice': web3.toWei('30', 'gwei'), # https://etherscan.io/gastracker
+      'data' : multicallContractDeployed.encodeABI(fn_name='multiCallWrite', args=[unixTime]) ,
+      'type' : 1,
+      'accessList' :
+                  [
+                      {
+                          "address" : contractOneAddress,
+                          "storageKeys": [
+                              "0x0000000000000000000000000000000000000000000000000000000000000000",
+                              codeHashString  ##Code hash from EXTCODEHASH https://blog.finxter.com/how-to-find-out-if-an-ethereum-address-is-a-contract/
+                          ]
+                      }
+                  ]
     }
 
     signed_tx = web3.eth.account.signTransaction(EIP_2930_tx, devTestnetPrivateKey)
@@ -467,7 +469,7 @@ You can also get an address codeHash with the ethers library.
     receipt = web3.eth.getTransactionReceipt(tx_hash)
     print("TX RECEIPT: " + str(receipt) )
 
-  </TabItem>
+</TabItem>
   <TabItem value="javascript" label="Javascript" default>
 
     const Web3 = require('web3')
@@ -480,8 +482,8 @@ You can also get an address codeHash with the ethers library.
     const signer = new ethers.Wallet(Buffer.from(process.env.devTestnetPrivateKey, 'hex'), provider);
     console.log("User wallet address: " + signer.address)
 
-    const contractAddress_JS = '0x41Ae7549023a7F0b6Cb7FE4d1807487b18cbAe10'
-    const contractABI_JS = [{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"multiCall","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[{"internalType":"address","name":"setCallOne","type":"address"}],"stateMutability":"nonpayable","type":"constructor"},{"inputs":[],"name":"callContractToCall","outputs":[{"internalType":"contractcontractToCall","name":"","type":"address"}],"stateMutability":"view","type":"function"}]
+    const contractAddress_JS = '0xb1fEf690f84241738b188eF8b88e52B2cc59AbD2'
+    const contractABI_JS = [{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"multiCallWrite","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[{"internalType":"address","name":"setCallOne","type":"address"}],"stateMutability":"nonpayable","type":"constructor"},{"inputs":[],"name":"callContractToCall","outputs":[{"internalType":"contractcontractToCall","name":"","type":"address"}],"stateMutability":"view","type":"function"},{"inputs":[],"name":"multiCallRead","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"}]
 
     const contractDefined_JS = new web3.eth.Contract(contractABI_JS, contractAddress_JS)
 
@@ -489,50 +491,47 @@ You can also get an address codeHash with the ethers library.
 
     async function createAndSendTx() {
 
-    const chainIdConnected = await web3.eth.getChainId();
-    console.log("chainIdConnected: "+ chainIdConnected)
+        const chainIdConnected = await web3.eth.getChainId();
+        console.log("chainIdConnected: "+ chainIdConnected)
 
-    const contractOneAddress = await contractDefined_JS.methods.callContractToCall().call()
-    console.log("contractOneAddress: "+ contractOneAddress)
-    const contractOneABI = [{"inputs":[{"internalType":"uint256","name":"x","type":"uint256"}],"name":"set","outputs":[],"stateMutability":"nonpayable","type":"function"},{"inputs":[],"name":"slot0","outputs":[{"internalType":"uint256","name":"","type":"uint256"}],"stateMutability":"view","type":"function"}]
+        const slot0 = await contractDefined_JS.methods.multiCallRead().call()
+        console.log("slot0: "+ slot0)
 
-    const contractOneDeployed = new web3.eth.Contract(contractOneABI, contractOneAddress)
+        const contractOneAddress = await contractDefined_JS.methods.callContractToCall().call()
+        console.log("contractOneAddress: "+ contractOneAddress)
 
-    const slot0 = await contractOneDeployed.methods.slot0().call()
-    console.log("slot0: "+ slot0)
+        const codeHash = await provider.getCode(contractOneAddress)
+        console.log("contractOneAddress codeHash: " + codeHash)
 
-    const codeHash = await provider.getCode(contractOneAddress)
-    console.log("contractOneAddress codeHash: " + codeHash)
+        const unixTime = Date.now();
+        console.log("UNIX TIME: " + unixTime)
 
-    const unixTime = Date.now();
-    console.log("UNIX TIME: " + unixTime)
+        const txCount = await provider.getTransactionCount(signer.address);
 
-    const txCount = await provider.getTransactionCount(signer.address);
-
-    const tx = signer.sendTransaction({
-        chainId: chainIdConnected,
-        to: contractAddress_JS,
-        nonce:    web3.utils.toHex(txCount),
-        gasLimit: web3.utils.toHex(2100000), // Raise the gas limit to a much higher amount
-        gasPrice: web3.utils.toHex(web3.utils.toWei('30', 'gwei')),
-        data: contractDefined_JS.methods.multiCall(unixTime).encodeABI(),
-        type: 1,
-        accessList: [
-          {
-            address: contractOneAddress, //Contract address we are calling from the "to" contract at some point.
-            storageKeys: [
-              "0x0000000000000000000000000000000000000000000000000000000000000000",
-              codeHash, //Code hash from EXTCODEHASH https://blog.finxter.com/how-to-find-out-if-an-ethereum-address-is-a-contract/
+        const tx = signer.sendTransaction({
+            chainId: chainIdConnected,
+            to: contractAddress_JS,
+            nonce:    web3.utils.toHex(txCount),
+            gasLimit: web3.utils.toHex(2100000), // Raise the gas limit to a much higher amount
+            gasPrice: web3.utils.toHex(web3.utils.toWei('30', 'gwei')),
+            data: contractDefined_JS.methods.multiCallWrite(unixTime).encodeABI(),
+            type: 1,
+            accessList: [
+              {
+                address: contractOneAddress, //Contract address we are calling from the "to" contract at some point.
+                storageKeys: [
+                  "0x0000000000000000000000000000000000000000000000000000000000000000",
+                  codeHash, //Code hash from EXTCODEHASH https://blog.finxter.com/how-to-find-out-if-an-ethereum-address-is-a-contract/
+                ]
+              }
             ]
-          }
-        ]
 
-    });
+        });
 
-    console.log("WAIT FOR TX RECEIPT: ")
-    await tx
-    console.log("TX RECEIPT: ")
-    console.log(tx)
+        console.log("WAIT FOR TX RECEIPT: ")
+        await tx
+        console.log("TX RECEIPT: ")
+        console.log(tx)
 
     }
 
