Remove symbol from list

--- a/docs/smartContracts/tokens/ERC-1155.md
+++ b/docs/smartContracts/tokens/ERC-1155.md
@@ -42,7 +42,7 @@ ERC-1155:
     -Each tokenId can be a different vending machine item:
         -water bottles
         -snack bars
-        -tea,
+        -tea
         -trail mix
 
 ## ERC-1155 Batch Transfer
