--- a/docs/smartContracts/tokens/ERC-721.md
+++ b/docs/smartContracts/tokens/ERC-721.md
@@ -115,15 +115,13 @@ Open up the shardeum-nft-dapp project in your favorite editor. Smart contracts a
 2. Below is Domains smart contract from the [nft.shardeum.us](https://nft.shardeum.us/) that we will be using for this tutorial. Copy and paste in the contents below into your Domains.sol file.
 
 ```
-//SPDX-License-Identifier: UNLICENSED
-
-pragma solidity ^0.8.10;
+// SPDX-License-Identifier: MIT
+pragma solidity 0.8.17;
 
 import "@openzeppelin/contracts/token/ERC721/extensions/ERC721URIStorage.sol";
 import "@openzeppelin/contracts/utils/Counters.sol";
-import {Base64} from "./libraries/Base64.sol";
-import "hardhat/console.sol";
-import "./libraries/StringUtils.sol";
+import "@openzeppelin/contracts/utils/Base64.sol";
+// import "hardhat/console.sol";
 
 contract Domains is ERC721URIStorage {
 
@@ -148,7 +146,7 @@ contract Domains is ERC721URIStorage {
     constructor(string memory _tld) ERC721("Web3 user name NFT on shardeum | SHM", "Web3 User Name") payable {
         owner = payable(msg.sender);
         tld = _tld;
-        console.log("%s name services deployed", _tld);
+        // console.log("%s name services deployed", _tld);
     }
 
     function price(string calldata name) public pure returns(uint){
@@ -174,7 +172,7 @@ contract Domains is ERC721URIStorage {
         require(msg.value >= _price, "not enough SHM paid");
 
         string memory _name = string(abi.encodePacked(name, ".", tld));
-        console.log("_name", _name);
+        // console.log("_name", _name);
 
         string memory finalSvg = string(abi.encodePacked(svgPartOne, _name, svgPartTwo));
 
@@ -182,7 +180,7 @@ contract Domains is ERC721URIStorage {
         uint256 length = StringUtils.strlen(name);
         string memory strLen = Strings.toString(length);
 
-        console.log("Registering %s on the contract with tokenId %d", name, newRecordId);
+        // console.log("Registering %s on the contract with tokenId %d", name, newRecordId);
 
         string memory json = Base64.encode(
             bytes(
@@ -202,15 +200,15 @@ contract Domains is ERC721URIStorage {
 
         string memory finalTokenUri = string(abi.encodePacked("data:application/json;base64,", json));
 
-        console.log("\n--------------------------------------------------------");
-        console.log("Final tokenURI", finalTokenUri);
-        console.log("--------------------------------------------------------\n");
+        // console.log("\n--------------------------------------------------------");
+        // console.log("Final tokenURI", finalTokenUri);
+        // console.log("--------------------------------------------------------\n");
 
         _safeMint(msg.sender, newRecordId);
         _setTokenURI(newRecordId, finalTokenUri);
 
         domains[name] = msg.sender;
-        console.log("%s has registred a domain", msg.sender);
+        // console.log("%s has registred a domain", msg.sender);
 
         names[newRecordId] = name;
         _tokenIds.increment();
@@ -249,8 +247,8 @@ contract Domains is ERC721URIStorage {
     function getAllNames() public view returns(string[] memory){
         string[] memory allNames = new string[](_tokenIds.current());
         for(uint i = 0; i < _tokenIds.current(); i++){
-            console.log("iteration i  names[i] ", names[i]);
-            console.log("iteration i  allNames[i] ", allNames[i]);
+            // console.log("iteration i  names[i] ", names[i]);
+            // console.log("iteration i  allNames[i] ", allNames[i]);
             allNames[i] = names[i];
         }
         return allNames;
@@ -260,6 +258,32 @@ contract Domains is ERC721URIStorage {
         return StringUtils.strlen(name) >= 3 && StringUtils.strlen(name) <= 10;
     }
 }
+
+library StringUtils { // Source: ENS contracts: //https://github.com/ensdomains/ens-contracts/blob/master/contracts/ethregistrar/StringUtils.sol
+    function strlen(string memory s) internal pure returns (uint256) {
+        uint256 len;
+        uint256 i = 0;
+        uint256 bytelength = bytes(s).length;
+        for (len = 0; i < bytelength; len++) {
+            bytes1 b = bytes(s)[i];
+            if (b < 0x80) {
+                i += 1;
+            } else if (b < 0xE0) {
+                i += 2;
+            } else if (b < 0xF0) {
+                i += 3;
+            } else if (b < 0xF8) {
+                i += 4;
+            } else if (b < 0xFC) {
+                i += 5;
+            } else {
+                i += 6;
+            }
+        }
+        return len;
+    }
+}
+
 ```
 
 This is the smart contract that creates Shardeum .shm Domains by calling registers function with your desired name.
